Fix margin spacing in code

--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,7 @@ img:nth-child(4) {
   img:first-child {
     display: inline-block;
     width: 24%;
+    margin-left: 1rem;
   }
 
   img:nth-child(2),
@@ -76,5 +77,9 @@ img:nth-child(4) {
   }
 }
 
+@media only screen and (min-width: 90em) {
 
-/**how to make the space appear**/
+  img:first-child {
+    margin-left: 1.4rem;
+  }
+}
